--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 -->
 		<ul class="info">
 			<li><i class="fa fa-phone-square"></i>337-577-1683</li>
-			<li><i class="fa fa-map-marker"></i>301 Clematis. Suite 3000, West Palm Beach, FL 33401</li>
+			<!--<li><i class="fa fa-map-marker"></i>Louisiana</li>-->
 			<li><i class="fa fa-envelope"></i><a href="mailto:kingdomdvlpr@gmail.com">kingdomdvlpr@gmail.com</a></li>
 		</ul>
 
