--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="wrapper">
-	<div class="left-section"><img src="images/watch.png" /></div>
+	<div class="left-section"><img src="images/kd_black_200.svg" /></div>
 	<div class="right-section">
 		<h1 id="logo">kingdom developer</h1>
 		<div class="seprator"></div>
@@ -45,7 +45,7 @@
 -->
 		
 	</div>
-	<div class="watch-section"><img src="images/watch.png" /></div>
+	<div class="watch-section"><img src="images/kd_black_200.svg" /></div>
 </div>
 
 
