--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Coming Soon</title>
+<title>Coming Soon | kingdomdvlpr.com</title>
 <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="screen" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <script type="text/javascript" src="assets/js/jquery.min.js"></script> 
@@ -19,8 +19,8 @@
 		<h1 id="logo">kingdom developer</h1>
 		<div class="seprator"></div>
 		<div class="main-content">
-			<h2>Our Website is coming soon</h2>
-			<p>In the mean time connect with us with the information provided</p>
+			<h2>How you view websites will change!</h2>
+			<p>Contact us for more information while our site is being developed.</p>
 		</div>
 <!--		<ul class="social">
 			<li id="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
